[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mudrex-tradeideas-bot"
version = "2.0.0"
description = "Centralized Telegram Signal Bot for Mudrex Futures Trading - Railway Hosted"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "DecentralizedJM"}
]
keywords = ["mudrex", "telegram", "trading", "signals", "crypto", "futures", "webhook", "railway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "python-telegram-bot>=20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "cryptography>=41.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mudrex-trading-sdk @ git+https://github.com/DecentralizedJM/mudrex-api-trading-python-sdk.git@2ecd4c2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]
